@@ -2,9 +2,11 @@ package it.pagopa.pn.datavault.middleware.wsclient;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import it.pagopa.pn.datavault.generated.openapi.msclient.userregistry.v1.dto.CertifiableFieldResourceOfstringDto;
+import it.pagopa.pn.datavault.generated.openapi.msclient.userregistry.v1.dto.UserResourceDto;
 import it.pagopa.pn.datavault.generated.openapi.server.v1.dto.BaseRecipientDto;
-import it.pagopa.pn.datavault.mandate.microservice.msclient.generated.userregistry.v1.dto.CertifiableFieldResourceOfstringDto;
-import it.pagopa.pn.datavault.mandate.microservice.msclient.generated.userregistry.v1.dto.UserResourceDto;
+import it.pagopa.pn.datavault.svc.entities.InternalId;
+import it.pagopa.pn.datavault.utils.RecipientUtils;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -70,7 +72,8 @@ class PersonalDataVaultUserRegistryClientTest {
         String fc = "RSSMRA85T10A562S";
         String iuid = "a8bdb303-18c0-43dd-b832-ef9f451bfe22";
         String expectediuid = "PF-"+iuid;
-        List<String> ids = Arrays.asList(expectediuid);
+        List<String> ids = List.of(expectediuid);
+        List<InternalId> iids = RecipientUtils.mapToInternalId(ids);
         UserResourceDto response = new UserResourceDto();
         CertifiableFieldResourceOfstringDto certifiableFieldResourceOfstringDto = new CertifiableFieldResourceOfstringDto();
         certifiableFieldResourceOfstringDto.setCertification(CertifiableFieldResourceOfstringDto.CertificationEnum.NONE);
@@ -100,7 +103,7 @@ class PersonalDataVaultUserRegistryClientTest {
                         .withStatusCode(200));
 
         //When
-        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(ids).collectList().block(Duration.ofMillis(3000));
+        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(iids).collectList().block(Duration.ofMillis(3000));
 
         //Then
         assertNotNull(result);
@@ -112,19 +115,109 @@ class PersonalDataVaultUserRegistryClientTest {
     }
 
     @Test
-    void getRecipientDenominationByInternalIdPFMissingUser() throws JsonProcessingException {
+    void getRecipientDenominationByInternalIdPFOnlySurname() throws JsonProcessingException {
         //Given
-        String name = "mario";
         String surname = "rossi";
         String fc = "RSSMRA85T10A562S";
-        String iuid = "a8bdb303-18c0-43dd-b832-ef9f451bfe22";
+        String iuid = "b8bdb303-18c0-43dd-b832-ef9f451bfe22";
         String expectediuid = "PF-"+iuid;
-        List<String> ids = Arrays.asList(expectediuid);
+        List<String> ids = List.of(expectediuid);
+        List<InternalId> iids = RecipientUtils.mapToInternalId(ids);
         UserResourceDto response = new UserResourceDto();
+        CertifiableFieldResourceOfstringDto certifiableFieldResourceOfstringDto = new CertifiableFieldResourceOfstringDto();
+        certifiableFieldResourceOfstringDto.setCertification(CertifiableFieldResourceOfstringDto.CertificationEnum.NONE);
+        response.setName(certifiableFieldResourceOfstringDto);
+        certifiableFieldResourceOfstringDto = new CertifiableFieldResourceOfstringDto();
+        certifiableFieldResourceOfstringDto.setCertification(CertifiableFieldResourceOfstringDto.CertificationEnum.NONE);
+        certifiableFieldResourceOfstringDto.setValue(surname);
+        response.setFamilyName(certifiableFieldResourceOfstringDto);
         response.setFiscalCode(fc);
         response.setId(UUID.fromString(iuid));
         ObjectMapper mapper = new ObjectMapper();
         String respjson = mapper.writeValueAsString(response);
+
+
+
+
+        new MockServerClient("localhost", 9999)
+                .when(request()
+                        .withMethod("GET")
+                        .withHeader("x-api-key", "pf")
+                        .withQueryStringParameters(Map.of("fl", Arrays.asList("familyName", "name", "fiscalCode")))
+                        .withPath("/users/" + iuid))
+                .respond(response()
+                        .withBody(respjson)
+                        .withContentType(MediaType.APPLICATION_JSON)
+                        .withStatusCode(200));
+
+        //When
+        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(iids).collectList().block(Duration.ofMillis(3000));
+
+        //Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(surname, result.get(0).getDenomination());
+        assertEquals(fc, result.get(0).getTaxId());
+        assertEquals(expectediuid, result.get(0).getInternalId());
+
+    }
+
+    @Test
+    void getRecipientDenominationByInternalIdPFOnlyName() throws JsonProcessingException {
+        //Given
+        String name = "mario";
+        String fc = "RSSMRA85T10A562S";
+        String iuid = "c8bdb303-18c0-43dd-b832-ef9f451bfe22";
+        String expectediuid = "PF-"+iuid;
+        List<String> ids = List.of(expectediuid);
+        List<InternalId> iids = RecipientUtils.mapToInternalId(ids);
+        UserResourceDto response = new UserResourceDto();
+        CertifiableFieldResourceOfstringDto certifiableFieldResourceOfstringDto = new CertifiableFieldResourceOfstringDto();
+        certifiableFieldResourceOfstringDto.setCertification(CertifiableFieldResourceOfstringDto.CertificationEnum.NONE);
+        certifiableFieldResourceOfstringDto.setValue(name);
+        response.setName(certifiableFieldResourceOfstringDto);
+        response.setFiscalCode(fc);
+        response.setId(UUID.fromString(iuid));
+        ObjectMapper mapper = new ObjectMapper();
+        String respjson = mapper.writeValueAsString(response);
+
+
+
+
+        new MockServerClient("localhost", 9999)
+                .when(request()
+                        .withMethod("GET")
+                        .withHeader("x-api-key", "pf")
+                        .withQueryStringParameters(Map.of("fl", Arrays.asList("familyName", "name", "fiscalCode")))
+                        .withPath("/users/" + iuid))
+                .respond(response()
+                        .withBody(respjson)
+                        .withContentType(MediaType.APPLICATION_JSON)
+                        .withStatusCode(200));
+
+        //When
+        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(iids).collectList().block(Duration.ofMillis(3000));
+
+        //Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(name, result.get(0).getDenomination());
+        assertEquals(fc, result.get(0).getTaxId());
+        assertEquals(expectediuid, result.get(0).getInternalId());
+
+    }
+
+    @Test
+    void getRecipientDenominationByInternalIdPFMissingUser() {
+        //Given
+        String fc = "RSSMRA85T10A562S";
+        String iuid = "a8bdb303-18c0-43dd-b832-ef9f451bfe22";
+        String expectediuid = "PF-"+iuid;
+        List<String> ids = List.of(expectediuid);
+        List<InternalId> iids = RecipientUtils.mapToInternalId(ids);
+        UserResourceDto response = new UserResourceDto();
+        response.setFiscalCode(fc);
+        response.setId(UUID.fromString(iuid));
 
         new MockServerClient("localhost", 9999)
                 .when(request()
@@ -139,7 +232,7 @@ class PersonalDataVaultUserRegistryClientTest {
         when(personalDataVaultTokenizerClient.findPii(Mockito.any())).thenReturn(Mono.just(response));
 
         //When
-        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(ids).collectList().block(Duration.ofMillis(3000));
+        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(iids).collectList().block(Duration.ofMillis(3000));
 
         //Then
         assertNotNull(result);
@@ -149,52 +242,6 @@ class PersonalDataVaultUserRegistryClientTest {
 
     }
 
-
-    @Test
-    void getRecipientDenominationByInternalIdPG() throws JsonProcessingException {
-        //Given
-        String name = "";
-        String surname = "mario rossi srl";
-        String fc = "12345678909";
-        String iuid = "a8bdb303-18c0-43dd-b832-ef9f451bfe22";
-        String expectediuid = "PG-"+iuid;
-        List<String> ids = Arrays.asList(expectediuid);
-        UserResourceDto response = new UserResourceDto();
-        CertifiableFieldResourceOfstringDto certifiableFieldResourceOfstringDto = new CertifiableFieldResourceOfstringDto();
-        certifiableFieldResourceOfstringDto.setCertification(CertifiableFieldResourceOfstringDto.CertificationEnum.NONE);
-        certifiableFieldResourceOfstringDto.setValue(name);
-        response.setName(certifiableFieldResourceOfstringDto);
-        certifiableFieldResourceOfstringDto = new CertifiableFieldResourceOfstringDto();
-        certifiableFieldResourceOfstringDto.setCertification(CertifiableFieldResourceOfstringDto.CertificationEnum.NONE);
-        certifiableFieldResourceOfstringDto.setValue(surname);
-        response.setFamilyName(certifiableFieldResourceOfstringDto);
-        response.setFiscalCode(fc);
-        response.setId(UUID.fromString(iuid));
-        ObjectMapper mapper = new ObjectMapper();
-        String respjson = mapper.writeValueAsString(response);
-
-        new MockServerClient("localhost", 9999)
-                .when(request()
-                        .withMethod("GET")
-                        .withHeader("x-api-key", "pg")
-                        .withQueryStringParameters(Map.of("fl", Arrays.asList("familyName", "name", "fiscalCode")))
-                        .withPath("/users/" + iuid))
-                .respond(response()
-                        .withBody(respjson)
-                        .withContentType(MediaType.APPLICATION_JSON)
-                        .withStatusCode(200));
-
-        //When
-        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(ids).collectList().block(Duration.ofMillis(3000));
-
-        //Then
-        assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals(surname, result.get(0).getDenomination());
-        assertEquals(fc, result.get(0).getTaxId());
-        assertEquals(expectediuid, result.get(0).getInternalId());
-
-    }
 
     @Test
     void getRecipientDenominationByInternalIdPFAfterRetryableException() throws JsonProcessingException {
@@ -204,7 +251,8 @@ class PersonalDataVaultUserRegistryClientTest {
         String fc = "RSSMRA85T10A562S";
         String iuid = "a8bdb303-18c0-43dd-b832-ef9f451bfe24";
         String expectediuid = "PF-"+iuid;
-        List<String> ids = Arrays.asList(expectediuid);
+        List<String> ids = List.of(expectediuid);
+        List<InternalId> iids = RecipientUtils.mapToInternalId(ids);
         UserResourceDto response = new UserResourceDto();
         CertifiableFieldResourceOfstringDto certifiableFieldResourceOfstringDto = new CertifiableFieldResourceOfstringDto();
         certifiableFieldResourceOfstringDto.setCertification(CertifiableFieldResourceOfstringDto.CertificationEnum.NONE);
@@ -248,7 +296,7 @@ class PersonalDataVaultUserRegistryClientTest {
                 );
 
         //When
-        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(ids).collectList().block();
+        List<BaseRecipientDto> result = client.getRecipientDenominationByInternalId(iids).collectList().block();
 
         //Then
         assertNotNull(result);
@@ -265,6 +313,7 @@ class PersonalDataVaultUserRegistryClientTest {
         String iuid = "a8bdb303-18c0-43dd-b832-ef9f451bfe23";
         String expectediuid = "PF-"+iuid;
         List<String> ids = List.of(expectediuid);
+        List<InternalId> iids = RecipientUtils.mapToInternalId(ids);
 
         MockServerClient mockServerClient = new MockServerClient("localhost", 9999);
         mockServerClient
@@ -280,7 +329,7 @@ class PersonalDataVaultUserRegistryClientTest {
 
        assertThrows(
                WebClientResponseException.InternalServerError.class,
-               () -> client.getRecipientDenominationByInternalId(ids).collectList().block()
+               () -> client.getRecipientDenominationByInternalId(iids).collectList().block()
        );
 
     }
